WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124467
Simple line path does not respect visibility:hidden
https://bugs.webkit.org/show_bug.cgi?id=124467
Summary
Simple line path does not respect visibility:hidden
Antti Koivisto
Reported
2013-11-17 04:27:33 PST
it should
Attachments
patch
(3.66 KB, patch)
2013-11-17 05:17 PST
,
Antti Koivisto
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2013-11-17 04:28:30 PST
<
rdar://problem/15465826
>
Antti Koivisto
Comment 2
2013-11-17 05:17:00 PST
Created
attachment 217146
[details]
patch
Antti Koivisto
Comment 3
2013-11-17 09:28:06 PST
http://trac.webkit.org/changeset/159385
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug