Simple line path does not respect visibility:hidden https://bugs.webkit.org/show_bug.cgi?id=124467

Reviewed by Anders Carlsson.

Source/WebCore:

Test: fast/text/text-visibility.html

* rendering/SimpleLineLayoutFunctions.cpp:
(WebCore::SimpleLineLayout::paintFlow):

LayoutTests:

* fast/text/text-visibility-expected.html: Added.
* fast/text/text-visibility.html: Added.



Canonical link: https://commits.webkit.org/142652@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159385 268f45cc-cd09-0410-ab3c-d52691b4dbfc